--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
+    "chartjs-plugin-annotation": "^0.5.7",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
+    "react-chartjs-2": "^2.7.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
     "socket.io": "^2.2.0"
