--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "node-sass": "^4.11.0",
+    "pretty-ms": "^4.0.0",
     "react": "^16.8.5",
     "react-chartjs-2": "^2.7.5",
     "react-dom": "^16.8.5",
